# C0DL3

./: .gitignore  ACTUAL_FUEGO_INTEGRATION_SUMMARY.md  ARBITRUM_ORBIT_MODEL.md  BLOCK_TIME_UPDATE.md  CLI_DAEMON_SUMMARY.md  COLD_L3_Node_Development_Outline.md  COLD_L3_Wightpaper.md  Cargo-demo.toml  Cargo.toml  DEVELOPER_PRIVACY_IMPLEMENTATION_PLAN.md  DEVELOPER_PRIVACY_PROGRESS.md  DEVELOPER_PRIVACY_PROGRESS_PHASE2.md  DEVELOPER_PRIVACY_PROGRESS_PHASE3.md  DEVELOPER_PRIVACY_PROGRESS_PHASE4.md  DUAL_MINING_ECONOMIC_MODEL.md  Dockerfile  FUEGO_DAEMON_INTEGRATION.md  HIGH_ROI_PRIVACY_FEATURES.md  LFG.md  MERGE_MINING.md  MIGRATION_TO_REAL_PROOFS.md  MODEL_COMPARISON.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PRIVACY_DEVELOPER_QUICK_REFERENCE.md  PRIVACY_IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_STARK_IMPLEMENTATION_PLAN.md  PROFESSIONAL_VISUAL_CLI.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION_PHASE3.md  PR_DESCRIPTION_PHASE4.md  PUSH_SUMMARY.md  README.md  README_FWEI.md  STARK_CRYPTO_DEVELOPMENT_PLAN.md  UNIFIED_DAEMON.md  ZKSYNC_HYPERCHAINS_MODEL.md  config.example.json  (+15 more)
.github/workflows/: build-macos-apple-silicon.yml  build-macos-intel.yml  build-ubuntu.yml  build-windows.yml  release.yml
CODL3-zksync/minimal-test/: Cargo.toml
c0dl3-omni/: Cargo.toml  README.md
c0dl3-omni/src/: error.rs  main.rs  types.rs
c0dl3-zksync/: FOUNDATIONAL_PRIVACY_ARCHITECTURE.md  OMNI_MIXER_IMPLEMENTATION copy.md  OMNI_MIXER_README.md  OMNI_MIXER_VALUE_PROPOSITION.md  PRIVACY_BLOCKCHAIN_LANDSCAPE.md  PRIVACY_ENHANCEMENTS.md
c0dl3-zksync/examples/: omni_mixer_demo.rs
c0dl3-zksync/src/: confidential_transactions.rs  foundational_privacy.rs  lp_integration.rs  network_privacy.rs  omni_mixer.rs  simple_omni_mixer.rs  stealth_addresses.rs  treasury_integration.rs
codl3-arbitrum/: Cargo.toml  README.md
codl3-arbitrum/src/: main.rs
codl3-zksync/: Cargo.toml
codl3-zksync/src/: main.rs
crates/block-sync/: Cargo.toml
crates/block-sync/src/: fuego_rpc.rs  lib.rs
crates/bridge/: Cargo.toml
crates/codl3-mining/: Cargo.toml
crates/codl3-mining/src/: lib.rs
crates/commitments/: Cargo.toml
crates/commitments/src/: lib.rs
crates/consensus/: Cargo.toml
crates/encryption/: Cargo.toml
crates/fuego-integration/: Cargo.toml
crates/fuego-integration/src/: daemon.rs  fees.rs  lib.rs  miner.rs  rewards.rs
crates/net-p2p/: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: config.rs  lib.rs  main.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/state-db/: Cargo.toml
crates/state-db/src/: lib.rs
crates/txpool/: Cargo.toml
crates/txpool/src/: lib.rs
crates/zk-proofs/: Cargo.toml
crates/zk-proofs/src/: circuit.rs  lib.rs  privacy.rs  prover.rs  verifier.rs
crates/zksync-client/: Cargo.toml
demo/: demo_visual_cli.rs
docs/: CLI_DAEMON.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MERGED_CLI_IMPLEMENTATION_PLAN.md  MERGE_MINING_SUMMARY.md  MERGE_MINING_TEST_RESULTS.md  MINING_SYSTEM.md  PRIVACY_IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_VISUAL_CLI_SUMMARY.md  PROJECT_STATUS_SUMMARY.md  UNIFIED_DAEMON_SUMMARY.md  USER_PRIVACY_IMPLEMENTATION.md  ZKC0DL3_VALIDATOR_GUIDE.md
examples/: api_example.sh  bidirectional_bridge_example.rs  c0dl3_no_block_rewards.rs  c0dl3_txn_fees.rs  c0dl3_txn_fees_usd.rs  cn_upx2_multimode_test.rs  cn_upx2_test.rs  fwei_conversion_test.rs  merge_mining_analysis.rs  merge_mining_cnupx2.rs  omni_mixer_demo.rs  p2p_test.rs  p2p_transport_test.rs  phase2_transaction_privacy_test.rs  phase3_advanced_privacy_test.rs  phase4_performance_test.rs  phase5_security_audit_test.rs  phase6_production_deployment_test.rs  privacy_analysis.rs  production_stark_test.rs  realistic_eth_comparison.rs  rpc_integration_test.rs  security_fixes_test.rs  simple_test.rs  stark_core_test.rs  stark_implementation_status.rs  xfg_winterfell_integration_test.rs
genesis_collection/: CDYieldRewardContract.sol  CD_REWARD_DISTRIBUTION_PLAN.md  CIRCULATING_SUPPLY_EXAMPLE.md  ColdToken.sol  CommunityTokenListingExample.sol  DUAL_STAKING_GUIDE.md  ElderadoDualStakingContract.sol  ElderadoGenesisContract.sol  ElderadoStakingRewardContract.sol  GENESIS_TOKENS_README.md  LPLiquidityRewardContract.sol  ParaDistributorContract.sol  ParaToken.sol  README.md  REWARD_SYSTEM_SUMMARY.md  STAKING_GUIDE.md  deploy_genesis.js  deploy_genesis_tokens.js  deploy_reward_system.js  elderado_genesis_collection.json  hardhat.config.js  package-lock.json  package.json
merge_mining_test_crate/: Cargo.toml
merge_mining_test_crate/src/: lib.rs
nft_collection/: ColdToken.sol  DUAL_STAKING_GUIDE.md  ElderadoDualStakingContract.sol  ElderadoGenesisContract.sol  README.md  deploy_dual_staking.js  deploy_genesis.js  elderado_genesis_collection.json
privacy_test_crate/: Cargo.toml
privacy_test_crate/src/: lib.rs
scripts/: build-fuego-daemon.sh  start-cli-daemon.sh  start-unified-daemon.sh  start-visual-cli.sh
src/: cli_interface.rs  enhanced_cli.rs  fuego_daemon.rs  fuego_units.rs  lib.rs  main.rs  omni_mixer.rs  simple_visual_cli.rs  unified_cli.rs  visual_cli.rs
src/mining/: cn_upx2.rs  mod.rs
src/privacy/: address_encryption.rs  advanced_privacy_features.rs  advanced_privacy_starks.rs  amount_commitments.rs  boojum_stark_proofs.rs  codl3-implementations.code-workspace  cross_chain_privacy.rs  mining_privacy.rs  mod.rs  performance_optimization.rs  phase4_performance_optimization.rs  phase5_security_audit.rs  phase6_production_deployment.rs  placeholder_tracking.rs  privacy_monitoring.rs  production_boojum_integration.rs  production_cross_chain_privacy.rs  production_deployment_prep.rs  production_performance_optimization.rs  production_privacy_monitoring.rs  production_stark_core.rs  production_stark_proofs.rs  security_audit_prep.rs  stark_proofs.rs  tests.rs  timing_privacy.rs  transaction_privacy_starks.rs  user_privacy.rs  (+1 more)
testnet/: TESTNET_README.md  deploy_testnet.sh  setup_testnet.sh  simple_testnet.sh  testnet_config.toml
tests/: merge_mining_tests.rs  standalone_merge_mining_tests.rs
(+17 files in other folders)
