[package]
name = "codl3-zksync"
version = "0.1.0"
edition = "2021"
authors = ["CODL3 Team"]
description = "CODL3 - zkSync Hyperchains Implementation"

[[bin]]
name = "codl3-zksync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
libp2p = "0.56.0"
secp256k1 = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"
# Additional dependencies for zkSync integration
reqwest = { version = "0.12", features = ["json"] }
ethers = { version = "2.0", features = ["rustls"] }

# Advanced Terminal UI Dependencies for Professional UX
crossterm = "0.27"
ratatui = "0.24"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.0"
spinners = "4.1"
terminal_size = "0.1"
rustyline = "12.0"

# Elite-Level Privacy and Zero-Knowledge Dependencies
# Production-ready cryptography for user-level privacy
bulletproofs = "4.0"       # Range proofs for amount privacy
chacha20poly1305 = "0.10"  # Address/timing encryption (AEAD)
curve25519-dalek = "4.0"   # Elliptic curves for commitments
rand = "0.8"               # Cryptographically secure random number generation
thiserror = "1.0"          # Error handling for privacy operations


# Production STARK Proof Systems
# Winter-crypto STARK prover (Facebook's production STARK system)
winter-crypto = "0.8"
winter-math = "0.8"
winter-prover = "0.8"
winter-utils = "0.8"
# Note: Boojum repository not publicly available, using Winter-crypto instead


# Additional Cryptographic Libraries
merlin = "3.0"            # Transcript for zero-knowledge proofs
