[package]
name = "codl3-zksync"
version = "0.1.0"
edition = "2021"
authors = ["CODL3 Team"]
description = "CODL3 - zkSync Hyperchains Implementation"

[[bin]]
name = "codl3-zksync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["tcp", "yamux", "noise", "identify", "kad", "floodsub", "macros", "tokio"] }
secp256k1 = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"
# Additional dependencies for zkSync integration
reqwest = { version = "0.12", features = ["json"] }
ethers = { version = "2.0", features = ["rustls"] }

# Advanced Terminal UI Dependencies for Professional UX
crossterm = "0.27"
ratatui = "0.24"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.0"
spinners = "4.1"
terminal_size = "0.1"
rustyline = "12.0"

# Elite-Level Privacy and Zero-Knowledge Dependencies
# Production-ready cryptography for user-level privacy
bulletproofs = "4.0"       # Range proofs for amount privacy
chacha20poly1305 = "0.10"  # Address/timing encryption (AEAD)
curve25519-dalek = "4.0"   # Elliptic curves for commitments
rand = "0.8"               # Cryptographically secure random number generation
thiserror = "1.0"          # Error handling for privacy operations

# CN-UPX/2 Mining Algorithm Dependencies
# CryptoNight UPX/2 implementation for Fuego compatibility
aes = "0.8"                # AES encryption for CryptoNight
blake3 = "1.5"             # Blake3 hash function
keccak = "0.1"             # Keccak hash function
ripemd = "0.1"             # RIPEMD hash function

# Production STARK Proof Systems
# Boojum STARK prover (zkSync's production STARK system)
# TODO: Fix Boojum repository URL - currently unavailable
# boojum = { git = "https://github.com/matter-labs/boojum", branch = "main" }

# Winter-crypto STARK implementation (production-ready)
winter-crypto = "0.13.1"     # Production STARK implementation
winter-math = "0.13.1"       # Mathematical primitives for STARKs
winter-utils = "0.13.1"      # STARK utilities
winter-fri = "0.13.1"        # FRI protocol for STARKs
winter-air = "0.13.1"        # AIR components for STARK prover/verifier

# Advanced Cryptographic Libraries
# Arkworks ecosystem for advanced cryptographic primitives
arkworks-gadgets = "0.4.20"  # Zero-knowledge gadgets
arkworks-circuits = "0.4.20" # Zero-knowledge circuits
arkworks-setups = "1.2.2"   # Zero-knowledge circuit setups
arkworks-mimc = "0.3.0"     # MiMC hash function
merlin = "3.0"              # Transcript for zero-knowledge proofs

# Phase 4: Performance Optimization Dependencies
rayon = "1.8"               # Parallel processing
num_cpus = "1.16"           # CPU core detection
