[package]
name = "codl3-zksync"
version = "0.1.0"
edition = "2021"
authors = ["CODL3 Team"]
description = "CODL3 - zkSync Hyperchains Implementation"

[[bin]]
name = "codl3-zksync"
path = "src/main.rs"

[features]
# Minimal default features for server/node only build
default = []
# Enable terminal UI/visual CLI modules
cli-ui = []
# Enable heavy/experimental privacy modules if needed
exp-privacy = []

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["tcp", "yamux", "noise", "identify", "kad", "floodsub", "macros", "tokio"] }
secp256k1 = "0.31.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"
# Additional dependencies for zkSync integration
reqwest = { version = "0.12", features = ["json"] }
ethers = { version = "2.0", features = ["rustls"] }

# Advanced Terminal UI Dependencies for Professional UX
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", default-features = false, optional = true }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.11", optional = true }
colored = "2.0"
spinners = "4.1"
terminal_size = { version = "0.1", optional = true }
rustyline = { version = "12.0", optional = true }

# Elite-Level Privacy and Zero-Knowledge Dependencies
# Production-ready cryptography for user-level privacy
bulletproofs = { version = "4.0", optional = true }
chacha20poly1305 = "0.10"
curve25519-dalek = { version = "4.0", optional = true }
rand = "0.8"
thiserror = "1.0"

# CN-UPX/2 Mining Algorithm Dependencies
# CryptoNight UPX/2 implementation for Fuego compatibility
aes = "0.8"
blake3 = "1.5"
keccak = "0.1"
ripemd = "0.1"

# Production STARK Proof Systems
# Boojum STARK prover (zkSync's production STARK system)
# TODO: Fix Boojum repository URL - currently unavailable
# boojum = { git = "https://github.com/matter-labs/boojum", branch = "main" }

# Winter-crypto STARK implementation (production-ready)
winter-crypto = "0.13.1"
winter-math = "0.13.1"
winter-utils = "0.13.1"
winter-fri = "0.13.1"
winter-air = "0.13.1"

# Advanced Cryptographic Libraries
# Arkworks ecosystem for advanced cryptographic primitives
arkworks-gadgets = { version = "0.4.20", optional = true }
arkworks-circuits = { version = "0.4.20", optional = true }
arkworks-setups = { version = "1.2.2", optional = true }
arkworks-mimc = { version = "0.3.0", optional = true }
merlin = "3.0"

# Phase 4: Performance Optimization Dependencies
rayon = "1.8"
num_cpus = "1.16"

# XFG Winterfell STARK Integration
xfg-stark = { git = "https://github.com/ColinRitman/xfgwin", branch = "complete-xfgwin-system" }

[target.'cfg(feature = "cli-ui")'.dependencies]
# Pull UI crates only when cli-ui feature is enabled
crossterm = { version = "0.27" }
ratatui = { version = "0.24", default-features = false }
dialoguer = { version = "0.11" }
terminal_size = { version = "0.1" }
rustyline = { version = "12.0" }

[target.'cfg(feature = "exp-privacy")'.dependencies]
# Heavy zk libraries gated
bulletproofs = { version = "4.0" }
curve25519-dalek = { version = "4.0" }
arkworks-gadgets = { version = "0.4.20" }
arkworks-circuits = { version = "0.4.20" }
arkworks-setups = { version = "1.2.2" }
arkworks-mimc = { version = "0.3.0" }
