[workspace]

[package]
name = "codl3-arbitrum"
version = "0.1.0"
edition = "2021"
authors = ["CODL3 Team"]
description = "CODL3 - Arbitrum Orbit Implementation"

[[bin]]
name = "codl3-arbitrum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"
base64 = "0.21"
rand = "0.8"


