[package]
name = "block-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }

# FFI for C++ integration
cxx = "1.0"

# Block and transaction types
bytes = "1.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
cxx-build = "1.0"
