[package]
name = "codl3-mining"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
keccak = "0.1"
libp2p = { workspace = true }
bytes = "1.0"
