[package]
name = "commitments"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Cryptographic libraries

blake2 = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# FFI for C++ integration
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"