[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tempfile = { version = "3.0", optional = true }

# Internal crates
block-sync = { path = "../block-sync" }
bridge = { path = "../bridge" }
commitments = { path = "../commitments" }
consensus = { path = "../consensus" }
encryption = { path = "../encryption" }
net-p2p = { path = "../net-p2p" }
rpc = { path = "../rpc" }
state-db = { path = "../state-db" }
txpool = { path = "../txpool" }
fuego-integration = { path = "../fuego-integration" }
codl3-mining = { path = "../codl3-mining" }
zksync-client = { path = "../zksync-client" }
zk-proofs = { path = "../zk-proofs" }

[dev-dependencies]
tempfile = "3.0"

# Configuration
config = "0.13"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "node"
path = "src/main.rs"