[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

axum = { workspace = true }
jsonrpc-core = { workspace = true }
tower = { workspace = true }