[package]
name = "state-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Database
rocksdb = { workspace = true }

# Merkle trees
merkle_light = { workspace = true }
sha2 = "0.10"
hex = "0.4"

# Async runtime
async-trait = "0.1"