[package]
name = "txpool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Transaction management
dashmap = { workspace = true }
priority-queue = { workspace = true }
hex = "0.4"

# Block sync integration
block-sync = { path = "../block-sync" }