[package]
name = "zk-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
keccak = { workspace = true }
blake2 = { workspace = true }


